scripts/CustomerDeployment.yaml
apiVersion: extensions/v1beta1 # for versions before 1.6.0 use extensions/v1beta1
kind: Deployment
metadata:
  name: customerws
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: customerws
    spec:
      containers:
      - name: customerws
        image: abenitezsan/customerservice
        imagePullPolicy: "Always"
        ports:
        - containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: customerws-service
spec:
  selector:
    app: customerws
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: NodePort
